services/nress/users/config/users-node-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-node-svc
  labels:
    app: users-node
spec:
  ports:
  - port: 3333
    protocol: TCP
    targetPort: 3333
    name: http
  selector:
    app: users-node
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: users-node-ingress
spec:
  tls:
  - hosts:
    - tsa.tsa.com
  rules:
  - host: tsa.tsa.com
    http:
      paths:
      - path: /usr
        backend:
          serviceName: users-node-svc
          servicePort: 3333
